{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 39,
  "lineage": "fe051fd5-b13a-df2f-59d7-94aec8125868",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "22.0.5.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1_frontend_subnet",
            "name": "group1_frontend_subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "group1",
            "virtual_network_name": "group1_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "monitoring_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "22.0.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1-monitoring-subnet",
            "name": "group1-monitoring-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "group1",
            "virtual_network_name": "group1_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "22.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f6b00ca0-3e71-4c25-8856-5eaff2221680",
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet",
            "location": "polandcentral",
            "name": "group1_vnet",
            "resource_group_name": "group1"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "lb_pool_nic_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb/backendAddressPools/group1_backend_pool",
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/networkInterfaces/group1_lb_nic_0/ipConfigurations/internal|/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb/backendAddressPools/group1_backend_pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/networkInterfaces/group1_lb_nic_0"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.vnet",
            "module.backend.azurerm_subnet.backend_subnet",
            "module.backend.module.lb.azurerm_lb.load_balancer",
            "module.backend.module.lb.azurerm_lb_backend_address_pool.backend_pool",
            "module.backend.module.nat.azurerm_nat_gateway.gateway",
            "module.backend.module.nat.azurerm_nat_gateway_public_ip_association.gateway_public_ip_association",
            "module.backend.module.nat.azurerm_public_ip.gateway_public_ip",
            "module.backend.module.nat.azurerm_subnet_nat_gateway_association.gateway_subnet_association",
            "module.backend.module.vm.azurerm_network_interface.load_balancer_nic"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb/backendAddressPools/group1_backend_pool",
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/networkInterfaces/group1_lb_nic_1/ipConfigurations/internal|/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb/backendAddressPools/group1_backend_pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/networkInterfaces/group1_lb_nic_1"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.vnet",
            "module.backend.azurerm_subnet.backend_subnet",
            "module.backend.module.lb.azurerm_lb.load_balancer",
            "module.backend.module.lb.azurerm_lb_backend_address_pool.backend_pool",
            "module.backend.module.nat.azurerm_nat_gateway.gateway",
            "module.backend.module.nat.azurerm_nat_gateway_public_ip_association.gateway_public_ip_association",
            "module.backend.module.nat.azurerm_public_ip.gateway_public_ip",
            "module.backend.module.nat.azurerm_subnet_nat_gateway_association.gateway_subnet_association",
            "module.backend.module.vm.azurerm_network_interface.load_balancer_nic"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "backend_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/networkSecurityGroups/group1_backend_nsg",
            "location": "polandcentral",
            "name": "group1_backend_nsg",
            "resource_group_name": "group1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "22.0.5.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web",
                "priority": 1008,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "22.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1_backend_subnet",
            "name": "group1_backend_subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "group1",
            "virtual_network_name": "group1_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "backend_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1_backend_subnet",
            "network_security_group_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/networkSecurityGroups/group1_backend_nsg",
            "subnet_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1_backend_subnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.vnet",
            "module.backend.azurerm_network_security_group.backend_nsg",
            "module.backend.azurerm_subnet.backend_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.backend.module.lb",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb/frontendIPConfigurations/group1_lb_frontend_ip",
                "name": "group1_lb_frontend_ip",
                "private_ip_address": "22.0.5.100",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1_frontend_subnet"
              }
            ],
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb",
            "location": "polandcentral",
            "name": "group1_lb",
            "private_ip_address": "22.0.5.100",
            "private_ip_addresses": [
              "22.0.5.100"
            ],
            "resource_group_name": "group1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.backend.module.lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb/backendAddressPools/group1_backend_pool",
            "loadbalancer_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb",
            "name": "group1_backend_pool"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.vnet",
            "module.backend.module.lb.azurerm_lb.load_balancer"
          ]
        }
      ]
    },
    {
      "module": "module.backend.module.lb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb/probes/group1_healthprobe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb",
            "name": "group1_healthprobe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.vnet",
            "module.backend.module.lb.azurerm_lb.load_balancer"
          ]
        }
      ]
    },
    {
      "module": "module.backend.module.lb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb/backendAddressPools/group1_backend_pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb/frontendIPConfigurations/group1_lb_frontend_ip",
            "frontend_ip_configuration_name": "group1_lb_frontend_ip",
            "frontend_port": 80,
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb/loadBalancingRules/group1_lb_rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb",
            "name": "group1_lb_rule",
            "probe_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/loadBalancers/group1_lb/probes/group1_healthprobe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.vnet",
            "module.backend.module.lb.azurerm_lb.load_balancer",
            "module.backend.module.lb.azurerm_lb_backend_address_pool.backend_pool",
            "module.backend.module.lb.azurerm_lb_probe.probe"
          ]
        }
      ]
    },
    {
      "module": "module.backend.module.nat",
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/natGateways/group1_nat_gateway",
            "idle_timeout_in_minutes": 10,
            "location": "polandcentral",
            "name": "group1_nat_gateway",
            "resource_group_name": "group1",
            "resource_guid": "4ab0df94-8513-47f9-b105-f9dd997be36a",
            "sku_name": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.backend.module.nat",
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "gateway_public_ip_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/natGateways/group1_nat_gateway|/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/publicIPAddresses/group1_gw_public_ip",
            "nat_gateway_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/natGateways/group1_nat_gateway",
            "public_ip_address_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/publicIPAddresses/group1_gw_public_ip"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "module.backend.module.nat.azurerm_nat_gateway.gateway",
            "module.backend.module.nat.azurerm_public_ip.gateway_public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.backend.module.nat",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "gateway_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/publicIPAddresses/group1_gw_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.215.248.56",
            "ip_version": "IPv4",
            "location": "polandcentral",
            "name": "group1_gw_public_ip",
            "resource_group_name": "group1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.backend.module.nat",
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "gateway_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1_backend_subnet",
            "nat_gateway_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/natGateways/group1_nat_gateway",
            "subnet_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1_backend_subnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet",
            "module.backend.azurerm_subnet.backend_subnet",
            "module.backend.module.nat.azurerm_nat_gateway.gateway"
          ]
        }
      ]
    },
    {
      "module": "module.backend.module.vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "load_balancer_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/networkInterfaces/group1_lb_nic_0",
            "internal_domain_name_suffix": "uaglb3trhysuzccwl0x5eiqwqa.wawx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "22.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1_backend_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "polandcentral",
            "name": "group1_lb_nic_0",
            "private_ip_address": "22.0.1.5",
            "private_ip_addresses": [
              "22.0.1.5"
            ],
            "resource_group_name": "group1"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet",
            "module.backend.azurerm_subnet.backend_subnet",
            "module.backend.module.nat.azurerm_nat_gateway.gateway",
            "module.backend.module.nat.azurerm_nat_gateway_public_ip_association.gateway_public_ip_association",
            "module.backend.module.nat.azurerm_public_ip.gateway_public_ip",
            "module.backend.module.nat.azurerm_subnet_nat_gateway_association.gateway_subnet_association"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/networkInterfaces/group1_lb_nic_1",
            "internal_domain_name_suffix": "uaglb3trhysuzccwl0x5eiqwqa.wawx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "22.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1_backend_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "polandcentral",
            "name": "group1_lb_nic_1",
            "private_ip_address": "22.0.1.4",
            "private_ip_addresses": [
              "22.0.1.4"
            ],
            "resource_group_name": "group1"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet",
            "module.backend.azurerm_subnet.backend_subnet",
            "module.backend.module.nat.azurerm_nat_gateway.gateway",
            "module.backend.module.nat.azurerm_nat_gateway_public_ip_association.gateway_public_ip_association",
            "module.backend.module.nat.azurerm_public_ip.gateway_public_ip",
            "module.backend.module.nat.azurerm_subnet_nat_gateway_association.gateway_subnet_association"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/publicIPAddresses/group1_bastion_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.215.254.35",
            "ip_version": "IPv4",
            "location": "polandcentral",
            "name": "group1_bastion_public_ip",
            "resource_group_name": "group1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "22.0.9.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "group1",
            "virtual_network_name": "group1_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "postgres_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "22.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1_postgres_subnet",
            "name": "group1_postgres_subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "group1",
            "virtual_network_name": "group1_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "frontend_nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/networkInterfaces/group1_frontend_nic1",
            "internal_domain_name_suffix": "uaglb3trhysuzccwl0x5eiqwqa.wawx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "22.0.5.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/publicIPAddresses/group1_frontend_public_ip",
                "subnet_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1_frontend_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "polandcentral",
            "name": "group1_frontend_nic1",
            "private_ip_address": "22.0.5.4",
            "private_ip_addresses": [
              "22.0.5.4"
            ],
            "resource_group_name": "group1"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.vnet",
            "module.frontend.azurerm_public_ip.frontend_public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/networkSecurityGroups/frontend-sg",
            "location": "polandcentral",
            "name": "frontend-sg",
            "resource_group_name": "group1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "frontend-HTTPS-rule",
                "priority": 1018,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "frontend-HTTP-rule",
                "priority": 1008,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "frontend_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "group1-parkanizer",
            "fqdn": "group1-parkanizer.polandcentral.cloudapp.azure.com",
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/publicIPAddresses/group1_frontend_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.215.255.101",
            "ip_version": "IPv4",
            "location": "polandcentral",
            "name": "group1_frontend_public_ip",
            "resource_group_name": "group1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "my_frontend_sg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1_frontend_subnet",
            "network_security_group_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/networkSecurityGroups/frontend-sg",
            "subnet_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1_frontend_subnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.vnet",
            "module.frontend.azurerm_network_security_group.frontend_sg"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "monitoring_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/networkInterfaces/group1_monitoring_nic",
            "internal_domain_name_suffix": "uaglb3trhysuzccwl0x5eiqwqa.wawx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "22.0.10.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/72e2720e-f496-43c7-ab41-8a74e03960e5/resourceGroups/group1/providers/Microsoft.Network/virtualNetworks/group1_vnet/subnets/group1-monitoring-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "polandcentral",
            "name": "group1_monitoring_nic",
            "private_ip_address": "22.0.10.10",
            "private_ip_addresses": [
              "22.0.10.10"
            ],
            "resource_group_name": "group1"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.monitoring_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}